# codex-test

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
input/: m_join.json  m_simple.json  package.json
scripts/: dev.sh  test.sh
src/codex_test/: __init__.py  __main__.py  agents_cli.py  agents_llm.py  cli.py  llm.py  llm_cli.py
tests/: test_basic.py  test_idmc.py  test_idmc_advanced.py  test_llm.py  test_llm_coverage.py  test_sql.py
tests/codex_test/: test_agents_cli.py  test_agents_llm.py  test_cli.py  test_llm_cli.py
