[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-test"
version = "0.1.0"
description = "Minimal Python scaffold for codex-test"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.40.0",
  "openai-agents>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "python-dotenv>=1.0.0",
  "pre-commit>=3.5.0",
]

[project.scripts]
codex-test = "codex_test.cli:main"
codex-llm = "codex_test.llm_cli:main"
codex-agents = "codex_test.agents_cli:main"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
